CHATS_SIT/force-app/main/default/objects/T_PROVR_CLOSURE__c.object
<CustomObject>
    <fields>
        <fullName>DTE_BEGIN_CLOSURE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Provider Closure</relationshipLabel>
        <relationshipName>Provider_Closure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_PROVIDER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Provider Closure Records</relationshipLabel>
        <relationshipName>Provider_Closure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IND_ACTIVE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TXT_COMMENTS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Provider Closure</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>External ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Closure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>